@@ -1,7 +1,7 @@
 
                                 RHash License
 
-Copyright (c) 2005-2011 Alexey Kravchenko <rhash.admin@gmail.com>
+Copyright (c) 2005-2011 Aleksey Kravchenko <rhash.admin@gmail.com>
 
 Permission is hereby granted, free of charge,  to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
